Commented out absolute positioning of footer to fix content from being cutoff

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -273,8 +273,8 @@ body {
 }
 
 #footer {
-	position: absolute;
-	bottom: 0;
+	#position: absolute;
+	#bottom: 0;
 	width: 100%;
 	/* Set the fixed height of the footer here */
 	height: 320px;
